# fresquito

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  app.py  createcontainer.sh  datos_tiempo.csv  dockerfile  index.nginx-debian.html  install.py  logs.sh  main-user.py  main.py  map.html  meteorologia.csv  new_town_index.csv  new_town_index.xlsx  notes.md  output.csv  pyproject.toml  requirements.txt  startcontainer.sh  town_index.xlsx
csv/: output.csv
data/: README.md  map.html  meteorologia.csv  new_town_index.csv  output.csv
docker/: createcontainer.sh  cronfile  nginx-default  startcontainer.sh
docs/: index.md
docs/architecture/: Architecture.md
docs/audit/: README.md
docs/features/: index.md
docs/optimization/: README.md
docs/reference/: ApiContract.md
docs/setup/: Setup.md
interfaz/: index.html  index.js  style.css
legacy/: README.txt  app.py  install.py  newMain.py
legacy/noused/: main.ipynb  notes.md
local/: app.py  datos_tiempo.csv  index.nginx-debian.html  install.py  meteorologia.csv  output.csv  weather_data.csv
local/interfaz/: index.js
noused/: ExcelClear.pynb.ipynb  notes.md
scripts/: build-and-run.sh  createcontainer.sh  logs.sh  run-ubuntu.sh  startcontainer.sh
src/fresquito/: __init__.py  __main__.py
src/fresquito/application/: __init__.py  config.py  run_pipeline.py  services.py
src/fresquito/domain/: __init__.py  models.py
src/fresquito/infrastructure/: __init__.py  geocoding.py  scraping.py  storage.py
src/fresquito/interface/: __init__.py  flask_app.py
(+1 files in other folders)
