[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fresquito"
version = "0.1.0"
description = "Weather API and pipeline: coldest and hottest towns in Spain (El Tiempo + Folium map)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
    "flask-cors>=3.0",
    "pandas>=1.0",
    "requests>=2.25",
    "beautifulsoup4>=4.9",
    "geopy>=2.0",
    "folium>=0.12",
    "lxml>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
fresquito = "fresquito.interface.flask_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
